fix: do not wrap text in tooltips

--- a/style/components/misc.scss
+++ b/style/components/misc.scss
@@ -221,6 +221,8 @@ textarea {
 .tooltip {
     pointer-events: none;
     text-wrap: nowrap;
+    overflow: hidden;
+    min-width: max-content;
     @include tooltip-shadow;
     @include border-or-not($outline:false);
 }
